--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colors": "^1.1.2",
     "dequeue": "^1.0.5",
     "diff": "^3.2.0",
+    "discord.js": "^11.1.0",
     "express": "^4.14.0",
     "iconv-lite": "^0.4.15",
     "knex": "^0.12.9",
